CAY-2112 Expose callback for "performInTransaction"
CAY-2113 cdbimport: Reverse-engineering reinstates previously ignored columns
CAY-2114 cdbimport: object layer settings are not respected
CAY-2115 DbLoader - allow loading DataMap without Obj layer
CAY-2116 Split schema synchronization code in a separate module
CAY-2118 cdbimport: drop support for the old style of table filtering
CAY-2132 Adding SybaseSelectTranslator to support TOP/DISTINCT TOP in limited queries 

Bug Fixes:

CAY-2064 Issue with BeanAccessor for classes with complex inheritance
CAY-2066 Fixes for inner enums handling in ExtendedTypeMap
CAY-2067 Cayenne 4.0 connection pool is occasionally running out of connections
CAY-2070 Modeler sync function adds extraneous ObjRelationships inside the class hierarchy
CAY-2078 Client code gen bug. Unnecessary DataMap class generation setting datamap gen to false.
CAY-2080 Cayenne doesn't pick up reverse engineering file changes
CAY-2084 ObjectIdQuery - no cache access polymorphism
CAY-2086 SelectById.selectFirst stack overflow
CAY-2087 PostCommitFilter is confused about changes made by Pre* listeners
CAY-2089 HTTP connections aren't always closed in new ROP implementation
CAY-2097 NullPointerException while updating relationships for entities with vertical inheritance
CAY-2101 DataContext.currentSnapshot() doesn't set snapshot entity name
CAY-2105 Add missing elements to the reverseEngineering.xsd
CAY-2108 cayenne-di: StackOverflow for decorator that takes Provider of the delegate
CAY-2110 Obfuscated exception when processing iterated results
CAY-2119 ProjectUpgrader test failure (Windows)
CAY-2122 Vertical Inheritance: Cannot Insert Record For Implementing Class with Attribute And Relationship
CAY-2125 SchemaUpdateStrategy doesn't work with multiple DataNodes
CAY-2126 Modeler cannot upgrade project from v7 to v9
CAY-2128 Modeler stored procedures are not imported

----------------------------------
Release: 4.0.M3
Date:
----------------------------------