@@ -36,7 +36,8 @@ CAY-2114 cdbimport: object layer settings are not respected
 CAY-2115 DbLoader - allow loading DataMap without Obj layer
 CAY-2116 Split schema synchronization code in a separate module
 CAY-2118 cdbimport: drop support for the old style of table filtering
-CAY-2132 Adding SybaseSelectTranslator to support TOP/DISTINCT TOP in limited queries 
+CAY-2129 Modeler: reengineer dialog improvements
+CAY-2132 Adding SybaseSelectTranslator to support TOP/DISTINCT TOP in limited queries
 
 Bug Fixes:
 
